--- a/_config.yml
+++ b/_config.yml
@@ -259,7 +259,7 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will
 # -----------------------------------------------------------------------------
 
 scholar:
-  style: american-physics-society.csl
+  style: apa
 
   last_name: [Einstein]
   first_name: [Albert, A.]
