--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,94 +2,131 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+      value: Satoshi Yoshida
+    - name: Affiliation
+      value: Department of Physics, Graduate School of Science, The University of Tokyo
+    - name: Address
+      value: Hongo 7-3-1, Bunkyo-ku, Tokyo 113-0033 Japan
+    - name: Email
+      value: satoshi.yoshida [at] phys.s.u-tokyo.ac.jp
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: PhD course in Physics
+      institution: Department of Physics, Graduate School of Science, The University of Tokyo
+      year: Apr. 2023 - present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - "Supervisor: Prof. Mio Murao"
+    - title: Master of Science
+      institution: Department of Physics, Graduate School of Science, The University of Tokyo
+      year: Apr. 2021 - Mar. 2023
       description:
-        - Description 1.
-        - Description 2.
+        - "Supervisor: Prof. Mio Murao"
+        - "Thesis: Higher-order quantum algorithms for universally inverting unitary and isometry operations"
+    - title: Bachelor of Science
+      institution: Department of Physics, Faculty of Science, The University of Tokyo
+      year: Apr. 2017 - Mar. 2021
 
-- title: Experience
+- title: Research Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: JSPS Research Fellow (DC1)
+      institution: Department of Physics, Graduate School of Science, The University of Tokyo
+      year: Apr. 2023 - present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Supervised by Prof. Mio Murao
+    - title: DAIKIN Fellow
+      institution: Department of Physics, Graduate School of Science, The University of Tokyo
+      year: Feb. 2022 - present
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - Supervised by Prof. Mio Murao
+    - title: Research Assistant of FoPM
+      institution: Department of Physics, Graduate School of Science, The University of Tokyo
+      year: Aug. 2021 - Jan. 2022
       description:
+        - Supervised by Prof. Mio Murao
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Teaching Experience
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Teaching Assistant of Exercise in Physics IV
+      institution: The University of Tokyo
+      year: 2021
+    - title: Teaching Assistant of First-Year Seminar for Natural Sciences Students
+      institution: The University of Tokyo
+      year: 2021
+      description:
+        - as a part of Research Assistant of Q-Leap Human resources development
 
-- title: Honors and Awards
+- title: Awards and Scholarships
   type: time_table
   contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+    - title: <a href="https://www.s.u-tokyo.ac.jp/ja/awards/encouragement/R4.html">Research Award for Master students of Graduate School of Science</a>
+      institution: The University of Tokyo
+      year: Mar. 2023
+    - title: <a href="https://www.tsqs2022.org/assets/pdf/PosterAwardsWinners.pdf">Poster Award in 2nd International Symposium on Trans-Scale Quantum Science</a>
+      institution: TSQS2022 Organizing Committee
+      year: Nov. 2022
+    - title: <a href="https://www.ieice.org/es/qit/text/award/qit45award.pdf">Presentation Award for students in the 45th Quantum Information Technology Symposium (QIT45)</a>
+      year: Feb. 2022
+    - title: <a href="https://cmpss.jp/forepast/ss2021/awards.php">Best Poster Award in the 66th Condensed Matter Physics Summer School (物性若手夏の学校)</a>
+      year: Aug. 2021
+    - title: <a href="https://www.s.u-tokyo.ac.jp/ja/awards/encouragement/R2.html">Study Award for Undergraduate students of Faculty of Science</a>
+      institution: The University of Tokyo
+      year: Mar. 2021
+    - title: <a href="https://www.s.u-tokyo.ac.jp/ja/info/8151/">Study and Visit Abroad Program (SVAP)</a>
+      institution: Faculty of Science, The University of Tokyo
+      year: Mar. 2020
+    - title: Scholarship from Hisao Iwai Memorial Tokyo Scholarship Foundation (岩井久雄記念東京奨学育英基金)
+      year: Apr. 2017 - Mar. 2023
+    - title: <a href="http://www.jpho.jp/2016/IPhO2016Swiss/2016IPhOresult-press-release.pdf">Gold medal in the International Physics Olympiad</a>
+      institution: Switzerland and Liechtenstein
+      year: Jul. 2016
+    - title: <a href="http://www.jpho.jp/2015/IPhO2015-India/IPhO2015-Result-PressRelease.pdf">Silver medal in the International Physics Olympiad</a>
+      institution: India
+      year: Jul. 2015
 
-- title: Academic Interests
-  type: nested_list
+- title: Fellowships
+  type: time_table
   contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+    - title: <a href="https://www.jsps.go.jp/english/e-pd/">JSPS Research Fellowships for Young Scientists (DC1)</a>
+      institution: Japan Society for the Promotion of Science
+      year: Apr. 2023 - Mar. 2026
+    - title: DAIKIN Fellowship
+      institution: Institute for Physics of Intelligence, The University of Tokyo
+      year: Feb. 2022 - Mar. 2026
+    - title: Research Assistant of Q-Leap Human resources development
+      institution: The University of Tokyo
+      year: Apr. 2021 - present
+    - title: <a href="https://www.s.u-tokyo.ac.jp/en/FoPM/">Forefront Physics and Mathematics Program to Drive Transformation (FoPM)</a>
+      institution: The University of Tokyo
+      year: Apr. 2021 - Mar. 2026
+      description:
+        - <a href="https://www.u-tokyo.ac.jp/en/academics/wings.html">a World-leading Innovative Graduate Study (WINGS) Program</a>
+
+- title: Seminars
+  type: time_table
+  contents:
+    - title: <a href="https://kcik.ug.edu.pl/event/universal-inversion-of-unitary-and-isometry-operations-deterministic-and-exact-algorithms/">Universal inversion of unitary and isometry operations&#58; deterministic and exact algorithms</a>
+      institution: University of Gdańsk
+      year: Feb. 2023
+      description:
+        - ICTQT Seminar
+    - title: <a href="https://www.iqoqi-vienna.at/detail/event/talk-by-satoshi-yoshida-probabilistic-exact-construction-of-decoders-from-encoding-black-boxes">Probabilistic exact construction of decoders from encoding black boxes</a>
+      institution: IQOQI Vienna
+      year: Jul. 2022
+      description:
+        - <a href="https://www.youtube.com/watch?v=zLmhY2qCd8o&list=PLtIs3eEC6pzKTj6l-MC5VCT7Uo7cim17m&index=16&ab_channel=IQOQIVienna">YouTube</a>
+
+- title: Outreach
+  type: time_table
+  contents:
+    - title: <a href="https://event.phys.s.u-tokyo.ac.jp/physlab2019/">Physics Lab. 2019</a> and <a href="https://event.phys.s.u-tokyo.ac.jp/physlab2020/about.html">2020</a>
+      institution: May Festival at The University of Tokyo
+      year: 2019 - 2020
+    - title: <a href="http://www.jpho.jp/index_jpho.html">The Committee of Japan Physics Olympiad</a>
+      year: 2017 - 2021
 
 - title: Other Interests
   type: list
