--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -128,7 +128,7 @@
     - title: <a href="http://www.jpho.jp/index_jpho.html">The Committee of Japan Physics Olympiad</a>
       year: 2017 - 2021
 
-- title: Other Interests
+- title: Others
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Kendo, Bouldering, Hiking, Skiing
