--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ twitter_username: sy_3104
 mastodon_username: qubit-social.xyz/@satoshiyoshida
 linkedin_username: # your LinkedIn user name
 telegram_username: # your Telegram user name
-scholar_userid: DbMN858AAAAJ
+scholar_userid: RALQ65cAAAAJ
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: 0000-0002-0521-5209
