--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -39,13 +39,9 @@
     - title: DAIKIN Fellow
       institution: Department of Physics, Graduate School of Science, The University of Tokyo
       year: Feb. 2022 - present
-      description:
-        - Supervised by Prof. Mio Murao
     - title: Research Assistant of FoPM
       institution: Department of Physics, Graduate School of Science, The University of Tokyo
       year: Aug. 2021 - Jan. 2022
-      description:
-        - Supervised by Prof. Mio Murao
 
 - title: Teaching Experience
   type: time_table
@@ -80,11 +76,10 @@
       year: Mar. 2020
     - title: Scholarship from Hisao Iwai Memorial Tokyo Scholarship Foundation (岩井久雄記念東京奨学育英基金)
       year: Apr. 2017 - Mar. 2023
-    - title: <a href="http://www.jpho.jp/2016/IPhO2016Swiss/2016IPhOresult-press-release.pdf">Gold medal in the International Physics Olympiad</a>
+    - title: <a href="http://www.jpho.jp/2016/IPhO2016Swiss/2016IPhOresult-press-release.pdf">Gold medal in the 47th International Physics Olympiad (IPhO 2016)</a>
       institution: Switzerland and Liechtenstein
       year: Jul. 2016
-    - title: <a href="http://www.jpho.jp/2015/IPhO2015-India/IPhO2015-Result-PressRelease.pdf">Silver medal in the International Physics Olympiad</a>
-      institution: India
+    - title: <a href="http://www.jpho.jp/2015/IPhO2015-India/IPhO2015-Result-PressRelease.pdf">Silver medal in the 46th International Physics Olympiad (IPhO 2015)</a>
       year: Jul. 2015
 
 - title: Fellowships
