--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -58,7 +58,7 @@
 - title: Awards and Scholarships
   type: time_table
   contents:
-    - title: <a href="https://www.s.u-tokyo.ac.jp/ja/awards/encouragement/R4.html">Research Award for Master students of Graduate School of Science</a>
+    - title: <a href="https://www.phys.s.u-tokyo.ac.jp/award/37776/">The School of Science Encouragement Award (Master program)</a>
       institution: The University of Tokyo
       year: Mar. 2023
     - title: <a href="https://www.tsqs2022.org/assets/pdf/PosterAwardsWinners.pdf">Poster Award in 2nd International Symposium on Trans-Scale Quantum Science</a>
@@ -68,7 +68,7 @@
       year: Feb. 2022
     - title: <a href="https://cmpss.jp/forepast/ss2021/awards.php">Best Poster Award in the 66th Condensed Matter Physics Summer School (物性若手夏の学校)</a>
       year: Aug. 2021
-    - title: <a href="https://www.s.u-tokyo.ac.jp/ja/awards/encouragement/R2.html">Study Award for Undergraduate students of Faculty of Science</a>
+    - title: <a href="https://www.phys.s.u-tokyo.ac.jp/award/27300/">The School of Science Encouragement Award (Undergraduate program)</a>
       institution: The University of Tokyo
       year: Mar. 2021
     - title: <a href="https://www.s.u-tokyo.ac.jp/ja/info/8151/">Study and Visit Abroad Program (SVAP)</a>
