--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -102,7 +102,7 @@
   contents:
     - title: <a href="https://event.phys.s.u-tokyo.ac.jp/physlab2019/">Physics Lab. 2019</a> and <a href="https://event.phys.s.u-tokyo.ac.jp/physlab2020/about.html">2020</a>
       institution: Present the basics of the quantum information at the school festival of the University of Tokyo.
-      year: May 2019 and May 2020
+      year: May 2019, May 2020
     - title: <a href="http://www.jpho.jp/index_jpho.html">The Committee of Japan Physics Olympiad</a>
       institution: Work as a tutor for candidate high school students for the International Physics Olympiad.
       year: Sep. 2017 - Aug. 2020
