--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -28,8 +28,7 @@
     - title: Bachelor of Science
       institution: Department of Physics, Faculty of Science, The University of Tokyo
       year: Apr. 2017 - Mar. 2021
-      desciprion:
-        - Graduated with <a href="https://www.phys.s.u-tokyo.ac.jp/award/27300/">The School of Science Encouragement Award (Undergraduate program)</a>
+      desciprion: Graduated with <a href="https://www.phys.s.u-tokyo.ac.jp/award/27300/">The School of Science Encouragement Award (Undergraduate program)</a>
 
 - title: Fellowships
   type: time_table
