--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -24,11 +24,11 @@
       description:
         - "Supervisor: Prof. Mio Murao"
         - "Thesis: Higher-order quantum algorithms for universally inverting unitary and isometry operations"
-        - Graduated with <a href="https://www.phys.s.u-tokyo.ac.jp/award/37776/">The School of Science Encouragement Award (Master program)</a>
+        - Graduated with <a href="https://www.phys.s.u-tokyo.ac.jp/award/37776/">The School of Science Encouragement Award</a>
     - title: Bachelor of Science
       institution: Department of Physics, Faculty of Science, The University of Tokyo
       year: Apr. 2017 - Mar. 2021
-      desciprion: Graduated with <a href="https://www.phys.s.u-tokyo.ac.jp/award/27300/">The School of Science Encouragement Award (Undergraduate program)</a>
+      desciprion: Graduated with <a href="https://www.phys.s.u-tokyo.ac.jp/award/27300/">The School of Science Encouragement Award</a>
 
 - title: Fellowships
   type: time_table
