--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: sy3104
 gitlab_username: # your GitLab user name
 twitter_username: sy_3104
-mastodon_username: qubit-social.xyz/@satoshiyoshida
+mastodon_username:
 linkedin_username: # your LinkedIn user name
 telegram_username: # your Telegram user name
 scholar_userid: RALQ65cAAAAJ
