--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  Email: satoshi.yoshida [at] phys.s.u-tokyo.ac.jp
+  Email: satoshiyoshida.phys [at] gmail.com
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
