--- a/_config.yml
+++ b/_config.yml
@@ -224,7 +224,7 @@ scholar:
   order: descending
 
   source: /_bibliography/
-  bibliography: papers.bib
+  bibliography: [papers.bib, reviews.bib, international.bib, domestic.bib, seminars.bib]
   bibliography_template: bib
   # Note: if you have latex math in your bibtex, the latex filter
   # preprocessing may conflict with MathJAX if the latter is enabled.
