--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -72,6 +72,8 @@
 - title: Awards and Scholarships
   type: time_table
   contents:
+    - title: Gold Prize, Student Poster Award in the 24th Asian Quantum Information Science Conference (AQIS24)
+      year: Aug. 2024
     - title: <a href="https://www.tsqs2022.org/assets/pdf/PosterAwardsWinners.pdf">Poster Award in the 2nd International Symposium on Trans-Scale Quantum Science</a>
       institution: TSQS2022 Organizing Committee
       year: Nov. 2022
