--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -48,7 +48,7 @@
       institution: The University of Tokyo
       year: Aug. 2021 - Jan. 2022
 
-- title: Working Experience
+- title: Internship
   type: time_table
   contents:
     - title: Student Researcher at Quantum Error Correction Protocols Team in Google Quantum AI
