--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,7 +2,7 @@
   type: map
   contents:
     - name: Name
-      value: Satoshi Yoshida
+      value: Satoshi Yoshida (吉田 智治)
     - name: Affiliation
       value: Department of Physics, Graduate School of Science, The University of Tokyo
     - name: Address
