--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -107,3 +107,8 @@
     - title: <a href="http://www.jpho.jp/index_jpho.html">The Committee of Japan Physics Olympiad</a>
       description: Work as a tutor for candidate high school students for the International Physics Olympiad.
       year: Sep. 2017 - Aug. 2020
+
+- title: Reviewing activities
+  type: map
+  contents:
+    - value: Optica, Physical Review A, Physical Review Letters, Physical Review Research, Quantum
