--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -114,4 +114,4 @@
     - title: Reviewer for the journals
       value: Optica, Physical Review A, Physical Review Letters, Physical Review Research, Quantum
     - title: (Sub)reviewer for the conferences
-      value: AQIS, SODA, TQC, QEC, QIP
+      value: AQIS, Beyond IID, SODA, TQC, QEC, QIP
