--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -101,6 +101,9 @@
 - title: Outreach
   type: time_table
   contents:
+    - title: 量⼦コンピュータによる時間のプログラミング (Programming of time using quantum computers)
+      description: Seminar for alumni of Osaka Seiko Gakuin High School (<a href="https://sites.google.com/view/tks2018">世の光応援団</a>).
+      year: Jun. 2024
     - title: <a href="https://event.phys.s.u-tokyo.ac.jp/physlab2019/">Physics Lab. 2019</a> and <a href="https://event.phys.s.u-tokyo.ac.jp/physlab2020/about.html">2020</a>
       description: Present the basics of the quantum information at the school festival of the University of Tokyo.
       year: May 2019, May 2020
