--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -68,12 +68,12 @@
       year: Feb. 2022 - Mar. 2026
     - title: Research Assistant of Q-Leap Human resources development
       institution: The University of Tokyo
-      year: Apr. 2021 - present
+      year: Apr. 2021 - Mar. 2026
     - title: <a href="https://www.s.u-tokyo.ac.jp/en/FoPM/">Forefront Physics and Mathematics Program to Drive Transformation (FoPM)</a>
       institution: The University of Tokyo
       year: Aug. 2021 - Mar. 2026
 
-- title: Awards and Scholarships
+- title: Awards
   type: time_table
   contents:
     - title: <a href="http://aqis-conf.org/2024/student-poster-awards">Student Poster Award (Gold Prize) in the 24th Asian Quantum Information Science Conference (AQIS24)</a>
@@ -94,8 +94,6 @@
     - title: <a href="https://www.s.u-tokyo.ac.jp/ja/info/8151/">Study and Visit Abroad Program (SVAP)</a>
       institution: Faculty of Science, The University of Tokyo
       year: Mar. 2020
-    - title: Scholarship from Hisao Iwai Memorial Tokyo Scholarship Foundation (岩井久雄記念東京奨学育英基金)
-      year: Apr. 2017 - Mar. 2023
     - title: <a href="http://www.jpho.jp/2016/IPhO2016Swiss/2016IPhOresult-press-release.pdf">Gold medal in the 47th International Physics Olympiad (IPhO 2016)</a>
       year: Jul. 2016
     - title: <a href="http://www.jpho.jp/2015/IPhO2015-India/IPhO2015-Result-PressRelease.pdf">Silver medal in the 46th International Physics Olympiad (IPhO 2015)</a>
