--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -33,7 +33,7 @@
 - title: Work
   type: time_table
   contents:
-    - title: Student Researcher
+    - title: Intern (Student Researcher)
       institution: Google Japan G.K.
       year: Mar. 2024 - May 2024
       description:
