--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -48,7 +48,7 @@
   contents:
     - title: Teaching Assistant of Exercise in Physics IV
       institution: The University of Tokyo
-      year: 2021
+      year: Apr. 2021 - Feb. 2022
     - title: Teaching Assistant of First-Year Seminar for Natural Sciences Students
       institution: The University of Tokyo
       year: 2021
