--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -3,6 +3,8 @@
   contents:
     - name: Name
       value: Satoshi Yoshida
+    - name: Position
+      value: PhD student
     - name: Affiliation
       value: Department of Physics, Graduate School of Science, The University of Tokyo
     - name: Address
