--- a/_data/cv_ja.yml
+++ b/_data/cv_ja.yml
@@ -107,7 +107,7 @@
       year: 2023
       description: Horizon Quantum Computing主催のハッカソンに招待 (2023年11月27日 - 2023年12月2日).
 
-- title: Outreach
+- title: アウトリーチ
   type: time_table
   contents:
     - title: 量⼦コンピュータによる時間のプログラミング
