--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -127,4 +127,4 @@
     - name: Journals
       value: Optica, Physical Review A, Physical Review Letters, Physical Review Research, Quantum
     - name: Conferences
-      value: AQIS, Beyond IID, SODA, TQC, QEC, QIP
+      value: AQIS, Beyond IID, SODA, STOC, TQC, QEC, QIP
