--- a/_data/cv_ja.yml
+++ b/_data/cv_ja.yml
@@ -61,11 +61,10 @@
   contents:
     - title: <a href="https://www.jsps.go.jp/english/e-pd/">日本学術振興会特別研究員 (DC1)</a>
       institution: 日本学術振興会
-      description: JSPS科研費 <a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-23KJ0734/">23KJ0734</a>, 4,200,000円 (3年間).
+      description: JSPS科研費 <a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-23KJ0734/">23KJ0734</a>
       year: 2023年4月 - 2026年3月
     - title: 卓越リサーチアシスタント (ダイキンフェローシップ)
       institution: 東京大学大学院理学系研究科物理学専攻
-      description: "研究費: 1,500,000円 (14ヶ月, 2022年2月 - 2023年3月)."
       year: 2022年2月 - 2023年3月
     - title: 卓越リサーチアシスタント (<a href="https://www.s.u-tokyo.ac.jp/ja/FoPM/">変革を駆動する先端物理・数学プログラム</a>)
       institution: 東京大学大学院理学系研究科物理学専攻
