--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -62,11 +62,10 @@
   contents:
     - title: <a href="https://www.jsps.go.jp/english/e-pd/">JSPS Research Fellowships for Young Scientists (DC1)</a>
       institution: Japan Society for the Promotion of Science
-      description: JSPS KAKENHI Grant Number <a href="https://kaken.nii.ac.jp/en/grant/KAKENHI-PROJECT-23KJ0734/">23KJ0734</a>, 4,200,000 JPY for three years.
+      description: JSPS KAKENHI Grant Number <a href="https://kaken.nii.ac.jp/en/grant/KAKENHI-PROJECT-23KJ0734/">23KJ0734</a>
       year: Apr. 2023 - Mar. 2026
     - title: DAIKIN Fellowship
       institution: Institute for Physics of Intelligence, The University of Tokyo
-      description: "Grant: 1,500,000 JPY for 14 months (February 2022 - March 2023)."
       year: Feb. 2022 - Mar. 2026
     - title: <a href="https://www.s.u-tokyo.ac.jp/en/FoPM/">Forefront Physics and Mathematics Program to Drive Transformation (FoPM)</a>
       institution: The University of Tokyo
