--- a/_data/cv_ja.yml
+++ b/_data/cv_ja.yml
@@ -123,6 +123,6 @@
   type: map
   contents:
     - name: 雑誌
-      value: Optica, Physical Review A, Physical Review Letters, Physical Review Research, Quantum
+      value: Communications Physics, Optica, Physical Review A, Physical Review Letters, Physical Review Research, Quantum
     - name: 学会
-      value: AQIS, Beyond IID, SODA, STOC, TQC, QEC, QIP
+      value: AQIS, Beyond IID, SODA, STOC, TQC, QCTiP, QEC, QIP
